test/compile_error/typemismatch.conf.8.def
config type_mismatch_conf {
	foo : int = 0xdeadbeef;
}
